--- a/index.html
+++ b/index.html
@@ -1,195 +1,208 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+<head>
 <meta name="google-site-verification" content="qg9hoPAcyfXqyW2YW1LevS1yCXjx65_t4TPjTGdf3OU" />
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Riaz - Works</title>
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
-    <!-- Primary Meta Tags -->
-    <meta name="title" content="- Responsive HTML5 Portfolio" />
-    <meta
-      name="description"
-      content="This is framwork less animated portfolio site"
-    />
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Riaz - Works</title>
+  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
+  <!-- Primary Meta Tags -->
+  <meta name="title" content="- Responsive HTML5 Portfolio" />
+  <meta
+    name="description"
+    content="This is framwork less animated portfolio site"
+  />
 
-    <!-- Open Graph / Facebook -->
-    <meta property="og:type" content="website" />
-    <meta property="og:url" content="" />
-    <meta property="og:title" content="Responsive HTML5 Portfolio" />
-    <meta
-      property="og:description"
-      content="This is framwork less animated portfolio site"
-    />
-    <meta
-      property="og:image"
-      content="https://i.postimg.cc/25ggpz7f/preview.jpg"
-    />
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="" />
+  <meta property="og:title" content="Responsive HTML5 Portfolio" />
+  <meta
+    property="og:description"
+    content="This is framwork less animated portfolio site"
+  />
+  <meta
+    property="og:image"
+    content="https://i.postimg.cc/25ggpz7f/preview.jpg"
+  />
 
-    <!-- Twitter -->
-    <meta property="twitter:card" content="summary_large_image" />
-    <meta property="twitter:url" content="" />
-    <meta property="twitter:title" content="- Responsive HTML5 Portfolio" />
-    <meta
-      property="twitter:description"
-      content="This is framwork less animated portfolio site"
-    />
-    <meta
-      property="twitter:image"
-      content="https://i.postimg.cc/25ggpz7f/preview.jpg"
-    />
-    <!-- Dynamic meta url set -->
-    <script>
-      document
-        .querySelector("meta[property='og:url']")
-        .setAttribute("content", document.location);
-      document
-        .querySelector("meta[property='twitter:url']")
-        .setAttribute("content", document.location);
-    </script>
-    <link
-      href="https://fonts.googleapis.com/css?family=Playfair+Display:400,500"
-      rel="stylesheet"
-      type="text/css"
-    />
-    <link
-      href="https://fonts.googleapis.com/css?family=Poppins:300,400,600"
-      rel="stylesheet"
-      type="text/css"
-    />
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image" />
+  <meta property="twitter:url" content="" />
+  <meta property="twitter:title" content="- Responsive HTML5 Portfolio" />
+  <meta
+    property="twitter:description"
+    content="This is framwork less animated portfolio site"
+  />
+  <meta
+    property="twitter:image"
+    content="https://i.postimg.cc/25ggpz7f/preview.jpg"
+  />
+  <!-- Dynamic meta url set -->
+  <script>
+    document
+      .querySelector("meta[property='og:url']")
+      .setAttribute("content", document.location);
+    document
+      .querySelector("meta[property='twitter:url']")
+      .setAttribute("content", document.location);
+  </script>
+  <link
+    href="https://fonts.googleapis.com/css?family=Playfair+Display:400,500"
+    rel="stylesheet"
+    type="text/css"
+  />
+  <link
+    href="https://fonts.googleapis.com/css?family=Poppins:300,400,600"
+    rel="stylesheet"
+    type="text/css"
+  />
 
-    <!-- Splitting CSS -->
-    <link rel="stylesheet" href="css/splitting.css" />
-    <link rel="stylesheet" href="css/splitting-cells.css" />
-    <!-- Main CSS -->
-    <link rel="stylesheet" href="css/style.css" />
-  </head>
-  <body>
-    <section class="container-fluid flex">
-      <header>
-        <a href="/" class="brand"> <img src="images/logo.png" alt="brand" /></a>
-        <nav class="main-nav">
-          <li><a href="/" title="Work" class="active">Work</a></li>
-          <li><a href="pages/about.html" title="About">about</a></li>
-          <li><a href="pages/blog.html" title="Blog">blog</a></li>
-          <li><a href="pages/contact.html" title="Contact">contact</a></li>
-        </nav>
-      </header>
-      <main>
-        <section class="portfolio_slider">
-          <ul class="portfolio_slider_images">
-            <li
-              style="
-                background-image: url(images/portfolio/bookmark-manager.jpg);
-              "
-            >
-              <div class="context">
-                <span>HTMl5</span>
-                <span>CSS</span>
-                <span>JavaScript</span>
-              </div>
-              <h1 class="slide-in" data-splitting>Bookmark Manager</h1>
-            </li>
-            <li
-              style="
-                background-image: url(images/portfolio/lambda_resturaunt.jpg);
-              "
-            >
-              <div class="context">
-                <span>Bootstrap 5</span>
-              </div>
-              <h1 class="slide-in" data-splitting>Lambda</h1>
-            </li>
-            <li
-              style="
-                background-image: url(images/portfolio/startup-agency.jpg);
-              "
-            >
-              <div class="context">
-                <span>TailwindCSS</span>
-              </div>
-              <h1 class="slide-in" data-splitting>Startup Agency</h1>
-            </li>
-            <li style="background-image: url(images/portfolio/greeny.jpg);">
-              <div class="context">
-                <span>TailwindCSS</span>
-                <span>PHP Contact Form</span>
-                <span>CodeCanyon</span>
-              </div>
-              <h1 class="slide-in" data-splitting>Greeny</h1>
-            </li>
-            <li style="background-image: url(images/portfolio/modernblog.jpg);">
-              <div class="context">
-                <span>Bootstrap</span>
-                <span>Laravel</span>
-              </div>
-              <h1 class="slide-in" data-splitting>Larablog</h1>
-            </li>
-            <li
-              style="background-image: url(images/portfolio/file_uploader.jpg);"
-            >
-              <div class="context">
-                <span>HTML5</span>
-                <span>CSS</span>
-                <span>JavaScript</span>
-                <span>PHP</span>
-              </div>
-              <h1 class="slide-in" data-splitting>Uploader</h1>
-            </li>
-            <li style="background-image: url(images/portfolio/riazv2.jpg);">
-              <div class="context">
-                <span>HTML5</span>
-                <span>CSS</span>
-                <span>jQuery</span>
-              </div>
-              <h1 class="slide-in" data-splitting>MY Portfolio V2</h1>
-            </li>
-            <li style="background-image: url(images/portfolio/riazv1.jpg);">
-              <div class="context">
-                <span>HTML5</span>
-                <span>CSS</span>
-                <span>JavaScript</span>
-              </div>
-              <h1 class="slide-in" data-splitting>MY Portfolio V1</h1>
-            </li>
-            <li
-              style="background-image: url(images/portfolio/Boo_Creative.jpeg);"
-            >
-              <div class="context">
-                <span>Bootstrap</span>
-              </div>
-              <h1 class="slide-in" data-splitting>Boo - Creative</h1>
-            </li>
-            <li style="background-image: url(images/portfolio/mitalent.jpg);">
-              <div class="context">
-                <span>HTML5</span>
-                <span>CSS</span>
-                <span>JavaScript</span>
-              </div>
-              <h1 class="slide-in" data-splitting>MI Talent</h1>
-            </li>
-          </ul>
-          <ul class="portfolio_slider_navigation">
-            <li><a href="pages/works/bookmark.html">Bookmark</a></li>
-            <li><a href="pages/works/lambda.html">Lambda</a></li>
-            <li>
-              <a href="pages/works/startup_agency.html">Startup Agency</a>
-            </li>
-            <li><a href="pages/works/greeny.html">Greeny</a></li>
-            <li><a href="pages/works/modernblog.html">Larablog</a></li>
-            <li><a href="pages/works/uploader.html">Uploader</a></li>
-            <li><a href="pages/works/v2.html">Portfolio V2</a></li>
-            <li><a href="pages/works/v1.html">Portfolio V1</a></li>
-            <li><a href="pages/works/boo.html">Boo</a></li>
-            <li><a href="pages/works/mitalent.html">MI Talent</a></li>
-          </ul>
-        </section>
-      </main>
-    </section>
-    <!-- Typed.js and splitting.js -->
-    <script src="js/splitting.min.js"></script>
-    <script defer src="js/typed.js@2.0.11"></script>
-    <!-- Main Script-->
-    <script src="js/main.js"></script>
-  </body>
+  <!-- Splitting CSS -->
+  <link rel="stylesheet" href="css/splitting.css" />
+  <link rel="stylesheet" href="css/splitting-cells.css" />
+  <!-- Main CSS -->
+  <link rel="stylesheet" href="css/style.css" />
+</head>
+<body>
+  <section class="container-fluid flex">
+    <header>
+      <a href="/" class="brand"> <img src="images/logo.png" alt="brand" /></a>
+      <nav class="main-nav">
+        <li><a href="/" title="Work" class="active">Work</a></li>
+        <li><a href="pages/about.html" title="About">about</a></li>
+        <li><a href="pages/blog.html" title="Blog">blog</a></li>
+        <li><a href="pages/contact.html" title="Contact">contact</a></li>
+      </nav>
+    </header>
+    <main>
+      <section class="portfolio_slider">
+        <ul class="portfolio_slider_images">
+          <li
+            style="
+              background-image: url(images/portfolio/bookmark-manager.jpg);
+            "
+          >
+            <div class="context">
+              <span>HTMl5</span>
+              <span>CSS</span>
+              <span>JavaScript</span>
+            </div>
+            <h1 class="slide-in" data-splitting>Bookmark Manager</h1>
+          </li>
+          <li
+            style="
+              background-image: url(images/portfolio/lambda_resturaunt.jpg);
+            "
+          >
+            <div class="context">
+              <span>Bootstrap 5</span>
+            </div>
+            <h1 class="slide-in" data-splitting>Lambda</h1>
+          </li>
+          <li
+            style="
+              background-image: url(images/portfolio/startup-agency.jpg);
+            "
+          >
+            <div class="context">
+              <span>TailwindCSS</span>
+            </div>
+            <h1 class="slide-in" data-splitting>Startup Agency</h1>
+          </li>
+          <li style="background-image: url(images/portfolio/greeny.jpg);">
+            <div class="context">
+              <span>TailwindCSS</span>
+              <span>PHP Contact Form</span>
+              <span>CodeCanyon</span>
+            </div>
+            <h1 class="slide-in" data-splitting>Greeny</h1>
+          </li>
+          <li style="background-image: url(images/portfolio/modernblog.jpg);">
+            <div class="context">
+              <span>Bootstrap</span>
+              <span>Laravel</span>
+            </div>
+            <h1 class="slide-in" data-splitting>Larablog</h1>
+          </li>
+          <li
+            style="background-image: url(images/portfolio/file_uploader.jpg);"
+          >
+            <div class="context">
+              <span>HTML5</span>
+              <span>CSS</span>
+              <span>JavaScript</span>
+              <span>PHP</span>
+            </div>
+            <h1 class="slide-in" data-splitting>Uploader</h1>
+          </li>
+          <li style="background-image: url(images/portfolio/riazv2.jpg);">
+            <div class="context">
+              <span>HTML5</span>
+              <span>CSS</span>
+              <span>jQuery</span>
+            </div>
+            <h1 class="slide-in" data-splitting>MY Portfolio V2</h1>
+          </li>
+          <li style="background-image: url(images/portfolio/riazv1.jpg);">
+            <div class="context">
+              <span>HTML5</span>
+              <span>CSS</span>
+              <span>JavaScript</span>
+            </div>
+            <h1 class="slide-in" data-splitting>MY Portfolio V1</h1>
+          </li>
+          <li
+            style="background-image: url(images/portfolio/Boo_Creative.jpeg);"
+          >
+            <div class="context">
+              <span>Bootstrap</span>
+            </div>
+            <h1 class="slide-in" data-splitting>Boo - Creative</h1>
+          </li>
+          <li style="background-image: url(images/portfolio/mitalent.jpg);">
+            <div class="context">
+              <span>HTML5</span>
+              <span>CSS</span>
+              <span>JavaScript</span>
+            </div>
+            <h1 class="slide-in" data-splitting>MI Talent</h1>
+          </li>
+        </ul>
+        <ul class="portfolio_slider_navigation">
+          <li><a href="pages/works/bookmark.html">Bookmark</a></li>
+          <li><a href="pages/works/lambda.html">Lambda</a></li>
+          <li>
+            <a href="pages/works/startup_agency.html">Startup Agency</a>
+          </li>
+          <li><a href="pages/works/greeny.html">Greeny</a></li>
+          <li><a href="pages/works/modernblog.html">Larablog</a></li>
+          <li><a href="pages/works/uploader.html">Uploader</a></li>
+          <li><a href="pages/works/v2.html">Portfolio V2</a></li>
+          <li><a href="pages/works/v1.html">Portfolio V1</a></li>
+          <li><a href="pages/works/boo.html">Boo</a></li>
+          <li><a href="pages/works/mitalent.html">MI Talent</a></li>
+        </ul>
+      </section>
+    </main>
+  </section>
+  <!-- Typed.js and splitting.js -->
+  <script src="js/splitting.min.js"></script>
+  <script defer src="js/typed.js@2.0.11"></script>
+  <!-- Main Script-->
+  <script src="js/main.js"></script>
+  <!--Start of Tawk.to Script-->
+<script type="text/javascript">
+    var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
+    (function(){
+    var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
+    s1.async=true;
+    s1.src='https://embed.tawk.to/605c2a73067c2605c0bc08a4/1f1k0bl1e';
+    s1.charset='UTF-8';
+    s1.setAttribute('crossorigin','*');
+    s0.parentNode.insertBefore(s1,s0);
+    })();
+</script>
+<!--End of Tawk.to Script-->
+</body>
 </html>
