add logRocket for tesing

--- a/index.html
+++ b/index.html
@@ -1,43 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-<meta name="google-site-verification" content="qg9hoPAcyfXqyW2YW1LevS1yCXjx65_t4TPjTGdf3OU" />
+  <meta name="google-site-verification" content="qg9hoPAcyfXqyW2YW1LevS1yCXjx65_t4TPjTGdf3OU" />
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Riaz - Works</title>
   <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
   <!-- Primary Meta Tags -->
   <meta name="title" content="- Responsive HTML5 Portfolio" />
-  <meta
-    name="description"
-    content="This is framwork less animated portfolio site"
-  />
+  <meta name="description" content="This is framwork less animated portfolio site" />
 
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website" />
   <meta property="og:url" content="" />
   <meta property="og:title" content="Responsive HTML5 Portfolio" />
-  <meta
-    property="og:description"
-    content="This is framwork less animated portfolio site"
-  />
-  <meta
-    property="og:image"
-    content="https://i.postimg.cc/25ggpz7f/preview.jpg"
-  />
+  <meta property="og:description" content="This is framwork less animated portfolio site" />
+  <meta property="og:image" content="https://i.postimg.cc/25ggpz7f/preview.jpg" />
 
   <!-- Twitter -->
   <meta property="twitter:card" content="summary_large_image" />
   <meta property="twitter:url" content="" />
   <meta property="twitter:title" content="- Responsive HTML5 Portfolio" />
-  <meta
-    property="twitter:description"
-    content="This is framwork less animated portfolio site"
-  />
-  <meta
-    property="twitter:image"
-    content="https://i.postimg.cc/25ggpz7f/preview.jpg"
-  />
+  <meta property="twitter:description" content="This is framwork less animated portfolio site" />
+  <meta property="twitter:image" content="https://i.postimg.cc/25ggpz7f/preview.jpg" />
   <!-- Dynamic meta url set -->
   <script>
     document
@@ -47,16 +33,8 @@
       .querySelector("meta[property='twitter:url']")
       .setAttribute("content", document.location);
   </script>
-  <link
-    href="https://fonts.googleapis.com/css?family=Playfair+Display:400,500"
-    rel="stylesheet"
-    type="text/css"
-  />
-  <link
-    href="https://fonts.googleapis.com/css?family=Poppins:300,400,600"
-    rel="stylesheet"
-    type="text/css"
-  />
+  <link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,500" rel="stylesheet" type="text/css" />
+  <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,600" rel="stylesheet" type="text/css" />
 
   <!-- Splitting CSS -->
   <link rel="stylesheet" href="css/splitting.css" />
@@ -64,6 +42,7 @@
   <!-- Main CSS -->
   <link rel="stylesheet" href="css/style.css" />
 </head>
+
 <body>
   <section class="container-fluid flex">
     <header>
@@ -78,11 +57,9 @@
     <main>
       <section class="portfolio_slider">
         <ul class="portfolio_slider_images">
-          <li
-            style="
+          <li style="
               background-image: url(images/portfolio/bookmark-manager.jpg);
-            "
-          >
+            ">
             <div class="context">
               <span>HTMl5</span>
               <span>CSS</span>
@@ -90,21 +67,17 @@
             </div>
             <h1 class="slide-in" data-splitting>Bookmark Manager</h1>
           </li>
-          <li
-            style="
+          <li style="
               background-image: url(images/portfolio/lambda_resturaunt.jpg);
-            "
-          >
+            ">
             <div class="context">
               <span>Bootstrap 5</span>
             </div>
             <h1 class="slide-in" data-splitting>Lambda</h1>
           </li>
-          <li
-            style="
+          <li style="
               background-image: url(images/portfolio/startup-agency.jpg);
-            "
-          >
+            ">
             <div class="context">
               <span>TailwindCSS</span>
             </div>
@@ -125,9 +98,7 @@
             </div>
             <h1 class="slide-in" data-splitting>Larablog</h1>
           </li>
-          <li
-            style="background-image: url(images/portfolio/file_uploader.jpg);"
-          >
+          <li style="background-image: url(images/portfolio/file_uploader.jpg);">
             <div class="context">
               <span>HTML5</span>
               <span>CSS</span>
@@ -152,9 +123,7 @@
             </div>
             <h1 class="slide-in" data-splitting>MY Portfolio V1</h1>
           </li>
-          <li
-            style="background-image: url(images/portfolio/Boo_Creative.jpeg);"
-          >
+          <li style="background-image: url(images/portfolio/Boo_Creative.jpeg);">
             <div class="context">
               <span>Bootstrap</span>
             </div>
@@ -191,18 +160,23 @@
   <script defer src="js/typed.js@2.0.11"></script>
   <!-- Main Script-->
   <script src="js/main.js"></script>
+
+  <script src="https://cdn.lr-in.com/LogRocket.min.js" crossorigin="anonymous"></script>
+  <script>window.LogRocket && window.LogRocket.init('q5j6e6/md-riaz');</script>
+
   <!--Start of Tawk.to Script-->
-<script type="text/javascript">
-    var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
-    (function(){
-    var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
-    s1.async=true;
-    s1.src='https://embed.tawk.to/605c2a73067c2605c0bc08a4/1f1k0bl1e';
-    s1.charset='UTF-8';
-    s1.setAttribute('crossorigin','*');
-    s0.parentNode.insertBefore(s1,s0);
+  <script type="text/javascript">
+    var Tawk_API = Tawk_API || {}, Tawk_LoadStart = new Date();
+    (function () {
+      var s1 = document.createElement("script"), s0 = document.getElementsByTagName("script")[0];
+      s1.async = true;
+      s1.src = 'https://embed.tawk.to/605c2a73067c2605c0bc08a4/1f1k0bl1e';
+      s1.charset = 'UTF-8';
+      s1.setAttribute('crossorigin', '*');
+      s0.parentNode.insertBefore(s1, s0);
     })();
-</script>
-<!--End of Tawk.to Script-->
+  </script>
+  <!--End of Tawk.to Script-->
 </body>
+
 </html>
