--- a/index.html
+++ b/index.html
@@ -75,81 +75,18 @@
                   >
                     <button class="menu-close"><i class="ti-close"></i></button>
                     <ul class="nav navbar-nav mb-2 mb-lg-0">
-                      <li class="menu-item-has-children">
+                      <li>
                         <a class="active" href="#">Home</a>
-                        <ul class="sub-menu">
-                          <li>
-                            <a class="active" href="index-2.html">Main Home</a>
-                          </li>
-                          <li><a href="index-3.html">Home Style 2</a></li>
-                          <li><a href="index-4.html">Home Style 3</a></li>
-                        </ul>
                       </li>
                       <li>
-                        <a href="about.html">About</a>
-                      </li>
-                      <li class="menu-item-has-children">
-                        <a href="#">Service</a>
-                        <ul class="sub-menu">
-                          <li><a href="service.html">Service</a></li>
-                          <li>
-                            <a href="service-single.html">Service Single</a>
-                          </li>
-                        </ul>
-                      </li>
-                      <li class="menu-item-has-children">
-                        <a href="#">Portfolio</a>
-                        <ul class="sub-menu">
-                          <li>
-                            <a href="portfolio-grid.html">Portfolio Grid</a>
-                          </li>
-                          <li>
-                            <a href="portfolio-masonary.html"
-                              >Portfolio Masonary</a
-                            >
-                          </li>
-                          <li><a href="portfolio.html">Portfolio Slide</a></li>
-                          <li>
-                            <a href="portfolio-single.html">Portfolio Single</a>
-                          </li>
-                        </ul>
-                      </li>
-                      <li class="menu-item-has-children">
-                        <a href="#">Blog</a>
-                        <ul class="sub-menu">
-                          <li><a href="blog.html">Blog right sidebar</a></li>
-                          <li>
-                            <a href="blog-left-sidebar.html"
-                              >Blog left sidebar</a
-                            >
-                          </li>
-                          <li>
-                            <a href="blog-fullwidth.html">Blog fullwidth</a>
-                          </li>
-                          <li class="menu-item-has-children">
-                            <a href="#">Blog details</a>
-                            <ul class="sub-menu">
-                              <li>
-                                <a href="blog-single.html"
-                                  >Blog details right sidebar</a
-                                >
-                              </li>
-                              <li>
-                                <a href="blog-single-left-sidebar.html"
-                                  >Blog details left sidebar</a
-                                >
-                              </li>
-                              <li>
-                                <a href="blog-single-fullwidth.html"
-                                  >Blog details fullwidth</a
-                                >
-                              </li>
-                            </ul>
-                          </li>
-                        </ul>
+                        <a href="#about">About</a>
                       </li>
                       <li>
-                        <a href="contact.html">Contact</a>
+                        <a href="#services">Service</a>
+                      </li>
+
+                      <li>
+                        <a href="#contact">Contact</a>
                       </li>
                     </ul>
                   </div>
@@ -197,13 +134,14 @@
                     </div>
                     <div data-swiper-parallax="400" class="slide-text">
                       <p>
-                        Must explain to how all this mistaken idea denouncing
-                        pleasure pain the system and expound the actua.
+                        Experienced PHP developer with extensive server-side web
+                        development knowledge gained in the industry since 2020.
+                        Well-versed in Front-end development.
                       </p>
                     </div>
                     <div class="clearfix"></div>
                     <div class="slide-btn">
-                      <a class="theme-btn" href="about.html">Hire Me</a>
+                      <a class="theme-btn" href="#">Hire Me</a>
                     </div>
                   </div>
                 </div>
@@ -216,20 +154,20 @@
             <div class="static-hero-img-inner">
               <img src="assets/images/slider/1.jpg" alt="" />
               <div class="icon-1 floating-item">
-                <img src="assets/images/icon/photoshop.svg" alt="" />
+                <img src="assets/images/icon/php.svg" alt="" />
               </div>
               <div class="icon-2 floating-item">
-                <img src="assets/images/icon/illustrator.svg" alt="" />
+                <img src="assets/images/icon/mysql.svg" alt="" />
               </div>
               <div class="icon-3 floating-item">
-                <img src="assets/images/icon/diamond.svg" alt="" />
+                <img src="assets/images/icon/flutter.svg" alt="" />
               </div>
               <div class="project floating-item">
                 <div class="icon">
                   <i class="fi flaticon-verified"></i>
                 </div>
                 <div class="p-text">
-                  <h3><span class="odometer" data-count="1500">00</span>+</h3>
+                  <h3><span class="odometer" data-count="50">00</span>+</h3>
                   <p>Complete Project</p>
                 </div>
               </div>
@@ -342,7 +280,7 @@
             <div class="col-lg-5 col-md-12 col-sm-12">
               <div class="wpo-about-exprience-wrap">
                 <div class="wpo-about-exprience">
-                  <h2>08</h2>
+                  <h2>02</h2>
                   <span>Years of Experience</span>
                 </div>
                 <div class="client">
@@ -356,23 +294,24 @@
                 <div class="wpo-about-title">
                   <h2>My Advantage</h2>
                   <p>
-                    Must explain to you how all this mistaken idea of denouncing
-                    pleasure and praising pain was born and I will give you a
-                    complete account the system and expound the actual and
-                    praising pain was born.
+                    Led the company's integration with third-party APIs. Created
+                    APIs for numerous services. Seeking to broaden knowledge of
+                    databases and deliver the highest standards of web design &
+                    development. Over time, I've used a variety of
+                    front-end/back-end frameworks and technologies.
                   </p>
                 </div>
                 <div class="wpo-about-funfact">
                   <div class="grid">
                     <div class="grid-inner">
                       <h3><span class="odometer" data-count="98">00</span>%</h3>
-                      <p>Figma</p>
+                      <p>PHP</p>
                     </div>
                   </div>
                   <div class="grid">
                     <div class="grid-inner">
                       <h3><span class="odometer" data-count="92">00</span>%</h3>
-                      <p>Sketch</p>
+                      <p>MySQL</p>
                     </div>
                   </div>
                   <div class="grid">
@@ -390,7 +329,7 @@
                   <div class="grid">
                     <div class="grid-inner">
                       <h3><span class="odometer" data-count="43">00</span>%</h3>
-                      <p>WordPress</p>
+                      <p>Flutter</p>
                     </div>
                   </div>
                   <div class="grid">
@@ -700,8 +639,8 @@
               <div class="wpo-section-title">
                 <h2>My Work Experience</h2>
                 <p>
-                  Must explain to you how all this mistaken idea of denouncing
-                  pleasure born and give you a complete account the system
+                  I have been working on web design and development for past 2
+                  years with various technologies like php and mysql
                 </p>
               </div>
             </div>
@@ -709,50 +648,13 @@
           <div class="wpo-work-wrap">
             <div class="wpo-work-item">
               <ul>
-                <li class="date">2015 - 2016</li>
+                <li class="date">2020 - <span>Present</span></li>
                 <li class="logo">
-                  <img src="assets/images/work/1.png" alt="" />
+                  <img src="assets/images/work/alphanet.png" alt="" />
                 </li>
                 <li class="position">
-                  Junior Visual Designer <span>Trapeza Group, USA.</span>
-                </li>
-                <li class="link"><a href="#">Go to website</a></li>
-              </ul>
-            </div>
-            <div class="wpo-work-item">
-              <ul>
-                <li class="date">2017 - 2018</li>
-                <li class="logo">
-                  <img src="assets/images/work/2.png" alt="" />
-                </li>
-                <li class="position">
-                  UI/UX Designer
-                  <span>Gallerie Ontario, Canada <span>(Remote)</span></span>
-                </li>
-                <li class="link"><a href="#">Go to website</a></li>
-              </ul>
-            </div>
-            <div class="wpo-work-item">
-              <ul>
-                <li class="date">2019 - 2020</li>
-                <li class="logo">
-                  <img src="assets/images/work/3.png" alt="" />
-                </li>
-                <li class="position">
-                  Seinor UI/UX Desinger <span>Morson Hybrid, Canada</span>
-                </li>
-                <li class="link"><a href="#">Go to website</a></li>
-              </ul>
-            </div>
-            <div class="wpo-work-item">
-              <ul>
-                <li class="date">2019 - <span>Present</span></li>
-                <li class="logo">
-                  <img src="assets/images/work/4.png" alt="" />
-                </li>
-                <li class="position">
-                  Product Designer
-                  <span>Myant Inc. Etobicoke, ON <span>(Remote)</span></span>
+                  Web Developer
+                  <span>Alpha Net, ON <span>(Full Time)</span></span>
                 </li>
                 <li class="link"><a href="#">Go to website</a></li>
               </ul>
